--- a/src/main/webapp/resources/css/join.css
+++ b/src/main/webapp/resources/css/join.css
@@ -33,6 +33,17 @@ input:focus {
     outline: none;
 }
 
+select{
+	font-weight:bold;
+	border-radius:6px;
+	
+	
+}
+option{
+	font-weight: bold;
+	border-radius: 6px;
+}
+
 
 
 h3 {
